--- a/admin/package.json
+++ b/admin/package.json
@@ -14,7 +14,13 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.2",
+    "@editorjs/list": "^2.0.8",
+    "@editorjs/paragraph": "^2.11.7",
     "@heroicons/react": "^2.2.0",
+    "@natterstefan/react-editor-js": "^0.3.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -34,11 +40,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "editor.js": "^0.1.0",
+    "editorjs-html": "^4.0.5",
     "lucide-react": "^0.515.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-editor-js": "^2.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
@@ -50,6 +58,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
